--- a/Languages/தமிழ்.lng
+++ b/Languages/தமிழ்.lng
@@ -59,11 +59,11 @@ actNewCursor.Caption=New Cursor...
 actNewCursor.Hint=New Cursor...
 actGrid.Caption=Grid
 actGrid.Hint=Show/Hide Grid
-actOpen.Caption=Open...
-actOpen.Hint=Open...
-actSave.Caption=Save
-actSave.Hint=Save
-actSaveAs.Caption=Save As...
+actOpen.Caption=திற...
+actOpen.Hint=திற...
+actSave.Caption=சேமி
+actSave.Hint=சேமி
+actSaveAs.Caption=எனச் சேமி...
 actCapture.Caption=Capture...
 actExtract.Caption=Extract...
 actClear.Caption=Clear
